tests_smt2 = [
  ['solver/bv/add.smt2'],
  ['solver/bv/mul.smt2', ['--bv-solver=prop']],
  ['solver/bv/mul.smt2', ['--bv-solver=preprop']],
  ['solver/fp/fma.smt2'],
  ['solver/fp/fma.smt2', ['-rwl=0']],
  ['solver/fp/fma.smt2', ['-rwl=1']],
  ['solver/bv/old_format.btor.smt2'],
  ['backtrack/push1.smt2'],
]
